[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python3-cyberfusion-sway"
version = "1.1.1"
description = "Sway is an agent for HAProxy agent health checks."
readme = "README.md"
authors = [
    { name = "Cyberfusion", email = "support@cyberfusion.io" },
]
dependencies = [
    "docopt==0.6.2",
    "PyYAML==6.0",
    "schema==0.7.5",
    "sdnotify==0.3.1",
]

[project.urls]
"Source" = "https://github.com/CyberfusionIO/python3-cyberfusion-sway"

[project.scripts]
sway-server = "cyberfusion.Sway.server:serve"
