[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python3-cyberfusion-sway"
version = "1.4"
description = "Sway is an agent for HAProxy agent health checks."
readme = "README.md"
authors = [
    { name = "Cyberfusion", email = "support@cyberfusion.io" },
]
dependencies = [
    "docopt==0.6.2",
    "PyYAML==6.0.3",
    "schema==0.7.8",
    "sdnotify==0.3.2",
    "tenacity==8.5.0",
]

[project.urls]
"Source" = "https://github.com/CyberfusionIO/python3-cyberfusion-sway"

[project.scripts]
sway-server = "cyberfusion.Sway.server:serve"
